ops/server.yml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
    - name: server
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: fra.ocir.io
      containers:
        - name: server
          image: fra.ocir.io/odca/oke/server:beta
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
