ops/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oke-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: server
              servicePort: 3000
          - path: /
            backend:
              serviceName: web
              servicePort: 80
